commited all files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation Bar -->
 <nav class="NavBar">
   <div class="Logo">
-    <span class="daf">daf<span class="code">CODE</span></span>
+    <img class="imglogo" src="./LOGO NOIR.png" alt="">
   </div>
   <div class="MenuIcon" onclick="toggleMenu()">
     &#9776; <!-- Hamburger icon -->
@@ -31,22 +31,21 @@
   <section class="Home" id="home">
     <div class="IntroText">
         <h2 class="Welcome">WELCOME TO MY WORLD</h2>
-        <h1 class="Name"><b>Hi, I'm <span class="Span">DAFRAOUI ELMEHDI</span></b></h1>
-        <h3 class="Domain">a Full Stack Web Developer.</h3>
-        <p class="Description">Creative full stack developer, Proficient in HTML, Tailwind CSS, JavaScript, React, and PHP</p>
+        <h1 class="Name"><b>Hi, I'm <span class="Span">NAOUASS REDOUANE</span></b></h1>
+        <h3 class="Domain">Designer UX / UI .</h3>
+        <p class="Description">Passionate about visual identity and creativity and solving user problems, and creative ui design proficient in figma,XD,Sketch</p>
         <div class="social-icons">
           <i class="fab fa-linkedin" onclick="handleLinkedin()"></i>
-          <i class="fab fa-github" onclick="handleGithub()"></i>
         </div>      
         <button class="ButtonResumer" onclick="handleCv()">Show CV</button>
     </div>
-    <img class="IntroImage" src="./GLD_6001 copie-fotor-20240913202852.png" alt="Intro Image">
+    <img class="IntroImage" src="./PHOTO 1.png" alt="Intro Image">
   </section>
 
   <!-- About Section -->
   <section class="About" id="about">
     <h2 class="Title">About Me</h2>
-    <p class="Para">Hey, I'm an entry-level React/PHP developer based in Casablanca, passionate about Art and Digital Design.</p>
+    <p class="Para">Hey , i'm ui/ux designer in morrocco, casablanca Passionate about visual identity and creativity and solving user problems, and creative ui design proficient in figma,XD,Sketch</p>
     <div class="DivCard">
       <div class="Card">
         <h1>2021 - 2022</h1>
@@ -54,7 +53,7 @@
       </div>
       <div class="Card">
         <h1>2022 - 2024</h1>
-        <h4>Diploma Technician Specialized in IT Development at Centre de Formation Professionnelle Multiservices Casablanca</h4>
+        <h4>Diploma as a Technician Specialized in Digital Design from the Institut Spécialisé de Technologie Appliquée in Graphic Arts.</h4>
       </div>
     </div>
   </section>
@@ -67,46 +66,40 @@
       <div class="Bar">
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 95%;"></div>
-          <span class="ProgressText">95% HTML</span>
+          <span class="ProgressText">95% Figma</span>
         </div>
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 90%;"></div>
-          <span class="ProgressText">90% React JS</span>
+          <span class="ProgressText">90% Adobe XD</span>
         </div>
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 85%;"></div>
-          <span class="ProgressText">85% SQL</span>
+          <span class="ProgressText">85% Visual identity</span>
         </div>
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 90%;"></div>
-          <span class="ProgressText">90% PHP</span>
+          <span class="ProgressText">90% User search</span>
         </div>
-        <div class="ProgressBar">
-          <div class="ProgressFill" style="width: 75%;"></div>
-          <span class="ProgressText">75% C#</span>
-        </div>
+        
       </div>
       <div class="Bar">
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 95%;"></div>
-          <span class="ProgressText">95% CSS</span>
+          <span class="ProgressText">95% Wireframing</span>
+        </div>
+        <div class="ProgressBar">
+          <div class="ProgressFill" style="width: 75%;"></div>
+          <span class="ProgressText">75% Adobe PhotoShop</span>
+        </div>
+        <div class="ProgressBar">
+          <div class="ProgressFill" style="width: 75%;"></div>
+          <span class="ProgressText">75% Adobe Illustrator</span>
         </div>
         <div class="ProgressBar">
           <div class="ProgressFill" style="width: 90%;"></div>
-          <span class="ProgressText">90% Bootstrap</span>
+          <span class="ProgressText">90% Prototyping</span>
         </div>
-        <div class="ProgressBar">
-          <div class="ProgressFill" style="width: 80%;"></div>
-          <span class="ProgressText">80% NoSQL (MongoDB)</span>
-        </div>
-        <div class="ProgressBar">
-          <div class="ProgressFill" style="width: 90%;"></div>
-          <span class="ProgressText">90% TailwindCSS</span>
-        </div>
-        <div class="ProgressBar">
-          <div class="ProgressFill" style="width: 90%;"></div>
-          <span class="ProgressText">90% JavaScript</span>
-        </div>
+        
       </div>
     </div>
   </section>
@@ -117,71 +110,42 @@
     <p class="Para">Here are all my projects to represent my expertise</p>
     <div class="ProjectDiv">
         <div class="CardProj">
-            <img class="card-img-top" src="./esing.png" alt="Card image">
+            <div class="card-img-top"><img class="Cardimged" src="./Frame.png" alt="Card image"></div>
             <div class="card-body">
-                <h3 class="card-title" style="margin-top: 10px;">E-Signe Digital</h3>
-                <p class="card-text">Le projet de signature numérique permet de signer électroniquement des documents de manière sécurisée en utilisant des certificats numériques pour garantir l'intégrité et l'authenticité des signatures.</p>
+                <h3 class="card-title" style="margin-top: 10px;">Application Aid Eladha</h3>
+                <p class="card-text">L'application aide les musulmans à célébrer l'Aïd al-Adha en fournissant des informations sur les dates, rituels, gestion du Qurbani, et en facilitant les interactions sociales.</p>
                 <div class="Flow">
-                    <h4 onclick="handleesign()">More Details</h4>
+                    <h4 onclick="handleAid()">More Details</h4>
                 </div>
             </div>
         </div>
         <!-- More Project Cards -->
         <div class="CardProj">
-            <img class="card-img-top" class="Scan" src="./Scan.png" alt="Card image">
-            <div class="card-body">
-                <h3 class="card-title" style="margin-top: 10px;">Numérisation Sécurisée pour les Entreprises</h3>
-                <p class="card-text">numérisation et la protection des documents sensibles, avec des contrôles d'accès stricts et un cryptage avancé pour garantir la confidentialité.</p>
-                <div class="Flow">
-                    <h4 onclick="handleScan()">More Details</h4>
-                </div>
-            </div>
-        </div><div class="CardProj">
-            <img class="card-img-top" src="./collegeParis.png" alt="Card image">
-            <div class="card-body">
-                <h3 class="card-title" style="margin-top: 10px;">College De Paris</h3>
-                <p class="card-text">Le Collège de Paris est une communauté d'établissements d'enseignement supérieur et d'organismes de formation.</p>
-                <div class="Flow">
-                    <h4>More Details</h4>
-                </div>
-            </div>
-        </div><div class="CardProj">
-        <img class="card-img-top" src="./stayhealthy.png" alt="Card image">
-        <div class="card-body">
-            <h3 class="card-title" style="margin-top: 10px;">StayHealthy</h3>
-            <p class="card-text">"StayHealthy" est une plateforme de bien-être complète offrant des plans personnalisés, des conseils d'experts et des outils interactifs pour améliorer votre forme physique, votre alimentation et votre bien-être mental. Atteignez vos objectifs santé avec StayHealthy, votre partenaire de confiance.</p>
-            <div class="Flow">
-                <h4 onclick="handleStay()">More Details</h4>
-            </div>
-        </div>
-    </div>
-    <div class="marge">
-      <div class="CardProj">
-        <img class="card-img-top" class="Scan" src="./systeme notariaux.png" alt="Card image">
-        <div class="card-body">
-            <h3 class="card-title" style="margin-top: 10px;">Gestion Digitale des Actes Notariaux</h3>
-            <p class="card-text">La plateforme "Gestion Digitale des Actes Notariaux" facilite la gestion sécurisée des actes notariés grâce à des outils numériques innovants. Elle offre des fonctionnalités comme la signature électronique et l'archivage sécurisé pour simplifier et accélérer les procédures légales.</p>
-            <div class="Flow">
-                <h4 onclick="handleNotariaux()">More Details</h4>
-            </div>
-        </div>
-        </div><div class="CardProj">
-          <img class="card-img-top" class="Scan" src="./users.png" alt="Card image">
+          <div class="card-img-top"><img class="Sized" src="./jui.jfif" alt="Card image"></div>
           <div class="card-body">
-              <h3 class="card-title" style="margin-top: 10px;">Système de Gestion des Utilisateurs</h3>
-              <p class="card-text">La plateforme "Système de Gestion des Utilisateurs" centralise la gestion des comptes avec des fonctionnalités de suivi, de rôles et de sécurité. Elle simplifie la gestion des utilisateurs tout en assurant la protection des données.</p>
-              <div class="Flow">
-                  <h4 onclick="handleUsers()">More Details</h4>
-              </div>
-          </div>
-      </div>
-      <div class="CardProj">
-        <img class="card-img-top" class="Scan" src="./bank.png" alt="Card image">
-        <div class="card-body">
-            <h3 class="card-title" style="margin-top: 10px;">Plateforme Avancée de Gestion Bancaire</h3>
-            <p class="card-text">La Plateforme Avancée de Gestion Bancaire permet une gestion complète et sécurisée des opérations financières avec des outils de suivi, d'automatisation et de reporting. Elle optimise la gestion des comptes et assure la conformité réglementaire.</p>
+                <h3 class="card-title" style="margin-top: 10px;">Application mobile & Web Juice</h3>
+                <p class="card-text">Une plateforme de vente de jus énergétiques pour sportives, offrant des produits optimisant les performances avec commande en ligne et livraison rapide.</p>
+                <div class="Flowjuice">  
+                    <h4 onclick="handleJuiceweb()">More Details (WEB)</h4>
+                    <h4 onclick="handleJuicemobile()">More Details (MOBILE)</h4>
+                </div>
+            </div>
+        </div><div class="CardProj">
+          <div class="card-img-top"><img class="Sized" src="./fadaa.jfif" alt="Card image"></div>
+          <div class="card-body">
+                <h3 class="card-title" style="margin-top: 10px;">Redesign Web site universitaire Fadaa</h3>
+                <p class="card-text">Le site "Fadaa" facilite la gestion académique et administrative, optimisant la communication et l'accès aux services universitaires.</p>
+                <div class="Flow">
+                    <h4 onclick="handlefadaa()">More Details</h4>
+                </div>
+            </div>
+        </div><div class="CardProj">
+          <div class="card-img-top"><img class="Sized" src="./Frame 1 (1).png" alt="Card image"></div>
+          <div class="card-body">
+            <h3 class="card-title" style="margin-top: 10px;">Redesign Web site Support Odoo</h3>
+            <p class="card-text">Odoo support de tickets optimise la gestion des demandes d'assistance et la communication avec les clients.</p>
             <div class="Flow">
-                <h4 onclick="handleBancaire()">More Details</h4>
+                <h4 onclick="handleopoo()">More Details</h4>
             </div>
         </div>
       </div>
@@ -207,7 +171,6 @@
         </form>
         <div class="social-icons">
           <i class="fab fa-linkedin" onclick="handleLinkedin()"></i>
-          <i class="fab fa-github" onclick="handleGithub()"></i>
         </div> 
         <p id="statusMessage"></p>
       </div>
@@ -225,7 +188,7 @@
 
     (function() {
       // Replace 'your_user_id' with the actual Public Key from the EmailJS dashboard
-      emailjs.init("rwBGxAnTyfQ3fe1wT"); // Initialize EmailJS with your User ID (Public Key)
+      emailjs.init("v46TlbUPvsdGthMHm"); // Initialize EmailJS with your User ID (Public Key)
     })();
   
     document.getElementById('contactForm').addEventListener('submit', function(event) {
@@ -248,11 +211,11 @@
         from_name: name,
         from_email: email,
         message: message,
-        to_email: 'dafraouimehdi05@gmail.com' // The recipient's email address
+        to_email: 'redouanenaouass@gmail.com' // The recipient's email address
       };
   
       // Send the email using EmailJS
-      emailjs.send('service_m2rv6rd', 'template_fmdjx11', emailParams)
+      emailjs.send('service_t0k3l2i', 'template_mf88j5b', emailParams)
         .then(function(response) {
           document.getElementById('statusMessage').textContent = "Message sent successfully!";
           document.getElementById('statusMessage').style.color = "green";
@@ -285,39 +248,31 @@
     }
 
     function handleCv() {
-    window.open('./Update New CV Mehdi word .pdf', '_blank');
+    window.open('./CV_REDOUANE NAOUASS .pdf', '_blank');
     }
 
-    function handleesign() {
-    window.open('https://github.com/DafraouiMehdi/E-Signe', '_blank');
+    const handleJuiceweb = () => {
+      window.open('https://www.figma.com/design/a9wDsBzXjzSMcfoL5JsF21/les-interface-juice?node-id=0%3A1&t=QljNse1uCQNTPnzR-1' , '_blank');
     }
 
-    function handleScan() {
-    window.open('https://github.com/DafraouiMehdi/Scanner', '_blank');
+    const handleJuicemobile = () => {
+      window.open('https://www.figma.com/file/vFWwAPbkXFazhrdCZ6XUIz/app-juice?type=design&node-id=46%3A152&mode=design&t=Laffof54B6EKCwaY-1' , '_blank');
     }
 
-    function handleStay() {
-    window.open('https://github.com/DafraouiMehdi/StayHealthy', '_blank');
+    const handleAid = () => {
+      window.open('https://www.figma.com/design/ZS6ebg2WgMb7x9DXZf5eW1/Eid-al-adha?node-id=0-1&t=ELNqTx0wftRqNpPV-1' , '_blank')
     }
 
-    function handleNotariaux() {
-    window.open('https://github.com/DafraouiMehdi/Gestion_Notariaux', '_blank');
+    const handlefadaa = () => {
+      window.open('https://www.figma.com/design/11YvwXc2swqa10eDM51KsH/FADAA?node-id=0-1&t=kKdk4sn97R4a2JE8-1' , '_blank')
     }
 
-    function handleUsers() {
-    window.open('https://github.com/DafraouiMehdi/Redux-Toolkit-Gestion_User', '_blank');
-    }
-
-    function handleBancaire() {
-    window.open('https://github.com/DafraouiMehdi/Systeme-bancaire', '_blank');
+    const handleopoo = () => {
+      window.open('https://www.figma.com/design/MqY0XebAG4KZTnyHg1Wwoa/Odoo?t=kKdk4sn97R4a2JE8-1' , '_blank')
     }
 
     function handleLinkedin() {
-      window.open('https://www.linkedin.com/in/el-mehdi-dafraoui-81054b263/' , '_blank')
-    }
-
-    function handleGithub() {
-      window.open('https://github.com/DafraouiMehdi' , '_blank')
+      window.open('https://www.linkedin.com/in/redouane-naouass-736b86293?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app' , '_blank')
     }
 
 
